Adapted to Android 2.3.3 (API Level 10)